[tool.poetry]
name = "pysatl-expert"
version = "0.0.1-alpha"
description = "PySATL expert system"
authors = ["PySATL Team <pysatl@yahoo.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/PySATL/pysatl-expert"
repository = "https://github.com/PySATL/pysatl-expert"
packages = [{include = "pysatl_expert"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = ">=1.25.1"
scipy = ">=1.11.2"
pandas = ">=2.2.1"
typing-extensions = ">=4.12.2"
pysatl-criterion = { git = "https://github.com/PySATL/pysatl-criterion.git", branch = "main" }

[tool.poetry.group.dev.dependencies]
markdown = "3.7"
mkdocs = "1.6.1"
mkdocs-material = "9.5.44"
mdx-truly-sane-lists = "1.3"
pymdown-extensions = "10.12"
jinja2 = "3.1.4"
mike = "2.1.3"
isort = "5.13.2"
coveralls = "4.0.1"
pytest = "8.3.3"
pytest-cov = "6.0.0"
pytest-random-order = "1.1.1"
ruff = "0.7.4"
pytest-mock = "3.14.0"
pre-commit = "4.0.1"
mypy = "1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 100
profile = "black"
lines_after_imports = 2
skip_glob = ["**/.env*", "**/env/*", "**/.venv/*", "**/docs/*", "**/user_data/*"]

[tool.ruff]
line-length = 100
extend-exclude = [".env", ".venv"]

[tool.ruff.lint]
extend-select = [
  "C90", "B", "F", "E", "W", "UP", "I", "A", "TID", "YTT", "S", "PTH", "ASYNC", "NPY"
]
extend-ignore = [
  "E241", "E272", "E221", "B007", "B904", "S603", "S607", "S608", "NPY002"
]

[tool.mypy]
ignore_missing_imports = true
namespace_packages = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101", "S104", "S311", "S105", "S106", "S110"
]